@@ -17,8 +17,8 @@ import java.util.Objects;
 import java.util.function.Function;
 
 import org.eclipse.emf.common.util.Diagnostic;
-import org.eclipse.emf.ecore.EAttribute;
 import org.eclipse.emf.ecore.EObject;
+import org.eclipse.emf.ecore.EStructuralFeature;
 import org.eclipse.sirius.components.collaborative.validation.api.IValidationService;
 import org.eclipse.sirius.components.compatibility.emf.properties.api.IPropertiesValidationProvider;
 import org.eclipse.sirius.components.representations.VariableManager;
@@ -42,7 +42,7 @@ public class PropertiesValidationProvider implements IPropertiesValidationProvid
     public Function<VariableManager, List<?>> getDiagnosticsProvider() {
         return variableManager -> {
             var optionalEObject = variableManager.get(VariableManager.SELF, EObject.class);
-            var optionalEAttribute = variableManager.get(PropertiesDefaultDescriptionProvider.ESTRUCTURAL_FEATURE, EAttribute.class);
+            var optionalEAttribute = variableManager.get(PropertiesDefaultDescriptionProvider.ESTRUCTURAL_FEATURE, EStructuralFeature.class);
             if (optionalEObject.isPresent() && optionalEAttribute.isPresent()) {
                 return this.validationService.validate(optionalEObject.get(), optionalEAttribute.get());
             }
@@ -55,8 +55,7 @@ public class PropertiesValidationProvider implements IPropertiesValidationProvid
     public Function<Object, String> getKindProvider() {
         return object -> {
             String kind = "Unknown";
-            if (object instanceof Diagnostic) {
-                Diagnostic diagnostic = (Diagnostic) object;
+            if (object instanceof Diagnostic diagnostic) {
                 switch (diagnostic.getSeverity()) {
                     case org.eclipse.emf.common.util.Diagnostic.ERROR:
                         kind = "Error";
@@ -79,8 +78,7 @@ public class PropertiesValidationProvider implements IPropertiesValidationProvid
     @Override
     public Function<Object, String> getMessageProvider() {
         return object -> {
-            if (object instanceof Diagnostic) {
-                Diagnostic diagnostic = (Diagnostic) object;
+            if (object instanceof Diagnostic diagnostic) {
                 return diagnostic.getMessage();
             }
             return "";
